--- a/QtUI/PilotInfo_UI.ui
+++ b/QtUI/PilotInfo_UI.ui
@@ -304,7 +304,7 @@
     <property name="geometry">
      <rect>
       <x>11</x>
-      <y>288</y>
+      <y>301</y>
       <width>476</width>
       <height>111</height>
      </rect>
@@ -330,8 +330,8 @@
    <widget class="QLabel" name="Route_label">
     <property name="geometry">
      <rect>
-      <x>13</x>
-      <y>270</y>
+      <x>16</x>
+      <y>283</y>
       <width>41</width>
       <height>16</height>
      </rect>
@@ -1182,6 +1182,52 @@
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="ETAlabel">
+    <property name="geometry">
+     <rect>
+      <x>16</x>
+      <y>265</y>
+      <width>51</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Sans Serif</family>
+      <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>Arrives at:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="ETA_Arrive">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>262</y>
+      <width>91</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Sans Serif</family>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
    <zorder>Aircraft</zorder>
    <zorder>PilotDetails</zorder>
    <zorder>GroupDetails</zorder>
@@ -1231,6 +1277,8 @@
    <zorder>FLFiled</zorder>
    <zorder>time_online</zorder>
    <zorder>time_online_text</zorder>
+   <zorder>ETAlabel</zorder>
+   <zorder>ETA_Arrive</zorder>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
