--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -3243,7 +3243,7 @@
      <x>0</x>
      <y>0</y>
      <width>1024</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuMenu">
@@ -3254,6 +3254,7 @@
     <addaction name="actionShow_last_data"/>
     <addaction name="actionGet_Scheduling"/>
     <addaction name="actionUpdate_Map"/>
+    <addaction name="actionBuild_data"/>
     <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
@@ -3312,6 +3313,11 @@
   <action name="actionSettings">
    <property name="text">
     <string>Settings</string>
+   </property>
+  </action>
+  <action name="actionBuild_data">
+   <property name="text">
+    <string>Build data</string>
    </property>
   </action>
  </widget>
